# apple-uti-data

./: .gitignore  README.md  README.rst  makefile  pyproject.toml  requirements.txt  uti.py
docs/: README.md  badges.csv
src/apple_uti/: __init__.py  core.py  uti.py  util.py
src/apple_uti/data/: __init__.py  data.yml
